--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@distube/ytdl-core": "^4.16.12",
     "@ducanh2912/next-pwa": "^10.2.9",
     "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.562.0",
     "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-hot-toast": "^2.6.0"
+    "react-hot-toast": "^2.6.0",
+    "yt-dlp-exec": "^1.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
