--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-hot-toast": "^2.6.0",
-    "yt-dlp-exec": "^1.0.2",
-    "yt-dlp-wrap": "^2.3.12"
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
